<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".About"
    android:orientation="vertical">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_item_photo"
        android:layout_marginTop="90dp"
        android:layout_marginBottom="16dp"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal"
        android:src="@android:color/darker_gray"/>

    <TextView
        android:text="@string/my_name"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:layout_marginTop="5dp"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/my_email"
        android:textAlignment="center"
        android:layout_marginTop="5dp"
        android:textColor="@android:color/black"
        android:textSize="17sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_me"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:textColor="@android:color/black"
        android:textSize="16sp" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">
            <TextView
                android:text="@string/instagram"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/dhanizakariya"
                android:textColor="@android:color/black"
                android:layout_marginStart="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">
            <TextView
                android:text="@string/twitter"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/dhanizakariya"
                android:textColor="@android:color/black"
                android:layout_marginStart="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">
            <TextView
                android:text="@string/linkedin"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/linkedin_com_in_dhanizakariya"
                android:textColor="@android:color/black"
                android:layout_marginStart="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">
            <TextView
                android:text="@string/github"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/github_com_dhanizakariya"
                android:textColor="@android:color/black"
                android:layout_marginStart="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </TableRow>
    </TableLayout>
</LinearLayout>