<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:card_view="http://schemas.android.com/tools"
    android:layout_gravity="center"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="4dp"
    card_view:cardCornerRadius="4dp">

    <RelativeLayout
        android:id="@+id/rv_car"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_item_photo"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_marginEnd="16dp"
            android:src="@android:color/darker_gray" />

        <LinearLayout
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/img_item_photo"
            android:layout_toRightOf="@+id/img_item_photo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_item_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:text="@string/car_name" />

            <TextView
                android:id="@+id/tv_racer1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="2"
                tools:text="@string/racer1" />

            <TextView
                android:id="@+id/tv_racer2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="2"
                tools:text="@string/racer2" />

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>